# [#24298] Screens jumps when using the ACL widget
# [#24336] *PHP warning in extension manger
# [#24674] Empty tooltips in module edit screens
# [#24405] Library JURI has an optional parameter: it should be mandatory
# [#24665] Inconsistency in the Add new newsfeed screen
# [#24591] No rounded corners in Opera for Modal

31-Jan-2011 Jean-Marie Simonet
 $ Deleting duplicate lang string
 $ Updating aa-AA.ini 

30-Jan-2011 Jean-Marie Simonet
 $ Customising a lang key to fit different languages

29-Jan-2011 Mark Dexter
# [#24288] com_mailto Spam Email Relay
# [#24371] SQL error in com_contact if id not set
# [#24097] Add a button to the installation to remove the installation folder
# [#24274] Title is displayed in Readmore text although 'Title with Readmore' is turned off

29-Jan-2011 Jean-Marie Simonet
 $ Deleting one unused string from all installation ini files.

28-Jan-2011 Mark Dexter
# Fix MySQLi wording in installation language files

28-Jan-2011 Christophe Demko
 # [#23915] Trashed articles - no indication of being trashed , when viewed at front of site
 # [#24404] Update GeSHI to 1.0.8.9 (Michael Babker)
 # [#24269] com_contact view contact > links (Nikolai Plath, Sergio Iglesias, Jennifer Marriott)
 # [#24287] Disabling modules on a page leaves error messages (Nikolai Plath)
 # [#24305] 3rd party components install in location "site" instead of "administrator" (Samuel Moffatt)
 # [#24444] com_newsfeeds doesn't set default view in frontend (Jeremy Wilken)
 # [#24394] Error page styling forces error box to far left (Jeremy Wilken, Nikolai Plath)
 # [#24309] PHP Strict Standards Message, Category Blog (bill richardson)

28-Jan-2011 Jean-Marie Simonet
 $ Correcting parse issues in 14 installation langs
 # [#24657] Enabling debug language mode in installation application. Thanks Christophe.
 
27-Jan-2011 Mark Dexter
# [#24644] Joomla! Web Application Framework library is uninstallable
# Fix SVN properties on some joomla_update sql scripts 
