@@ -37,6 +37,7 @@ $ -> Language fix or change
 # [#24405] Library JURI has an optional parameter: it should be mandatory
 # [#24665] Inconsistency in the Add new newsfeed screen
 # [#24591] No rounded corners in Opera for Modal
+# [#24557] Mod popular and latest article processing events in content plugins
 
 31-Jan-2011 Jean-Marie Simonet
  $ Deleting duplicate lang string
